--- a/inventories/development/hosts.yml
+++ b/inventories/development/hosts.yml
@@ -1,10 +1,11 @@
 all:
   hosts:
-    node1:
+    node_master:
       ansible_host: 192.168.1.50
-    node2:
+    node_1:
       ansible_host: 192.168.1.51
-    node3:
+    node_2:
       ansible_host: 192.168.1.52
-    node4:
+    node_3:
       ansible_host: 192.168.1.53
+
