--- a/roles/services/files/GameUserSettings.ini
+++ b/roles/services/files/GameUserSettings.ini
@@ -2,12 +2,10 @@
 ShowMapPlayerLocation=True
 AllowThirdPersonPlayer=True
 ServerCrosshair=True
-ServerPassword=
-ServerAdminPassword=password
 RCONEnabled=True
 RCONPort=32330
 TheMaxStructuresInRange=10500.000000
-OxygenSwimSpeedStatMultiplier=1.000000
+OxygenSwimSpeedStatMultiplier=2.000000
 StructurePreventResourceRadiusMultiplier=1.000000
 TribeNameChangeCooldown=15.000000
 PlatformSaddleBuildAreaBoundsMultiplier=1.000000
@@ -43,3 +41,5 @@ XPMultiplier=4
 ServerPVE=True
 AlwaysAllowStructurePickup=True
 
+[StructuresPlus]
+RemoveFloorRequirementFromStructurePlacement=true
