--- a/roles/services/ragnarok.yml
+++ b/roles/services/ragnarok.yml
@@ -1,4 +1,17 @@
 ---
+- name: Deploy Ark Ragnarok Volumes
+  hosts: all:!node_master
+  gather_facts: false
+  tasks:
+
+  - name: Create ragnarok_volume
+    docker_volume:
+      name: ragnarok_volume
+      driver_options:
+        type: nfs4
+        device: :/ragnarok
+        o: addr=192.168.1.50
+
 - name: Deploy Ark Ragnarok service
   hosts: node_master
   gather_facts: false
@@ -10,14 +23,6 @@
       driver: overlay
       driver_options:
         encrypted: true
-
-  - name: Create ragnarok_volume
-    docker_volume:
-      name: ragnarok_volume
-      driver_options:
-        type: nfs4
-        device: :/ragnarok
-        o: addr=192.168.1.50
 
   - name: Deploy Ark Ragnarok service
     docker_swarm_service:
