--- a/roles/services/files/GameUserSettings.ini
+++ b/roles/services/files/GameUserSettings.ini
@@ -1,4 +1,5 @@
 [ServerSettings]
+ActiveMods=2185399633,731604991,761535755,821530042,924933745
 ShowMapPlayerLocation=True
 AllowThirdPersonPlayer=True
 ServerCrosshair=True
